--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.15.0",
     "react-social-icons": "^6.3.0",
+    "styled-components": "^6.0.7",
     "tailwind": "^4.0.0",
     "webpack-dev-server": "^4.15.1"
   },
