--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "flowbite": "^1.8.1",
+    "flowbite-react": "^0.6.0",
     "icons": "^1.0.0",
     "nodemon": "^3.0.1",
     "react": "^18.2.0",
@@ -30,6 +32,7 @@
     "autoprefixer": "^10.4.15",
     "babel-core": "^4.7.16",
     "babel-loader": "^9.1.3",
+    "daisyui": "^3.7.7",
     "eslint": "^8.45.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
