--- a/admin/.env
+++ b/admin/.env
@@ -1,1 +1,1 @@
-MONGO_URI='mongodb+srv://mon-project-wee:monproject@monprojectwee.brqps.mongodb.net/monprojectWee?retryWrites=true&w=majority'
+MONGO_URI='mongodb://localhost:27017'
