--- a/package.json
+++ b/package.json
@@ -1,54 +1,108 @@
 {
 
-  "homepage" : "https://cypher0214.github.io/Edu-Website/",
+  "homepage": "https://cypher0214.github.io/Edu-Website/",
+
   "name": "savita-devi-coaching-center",
+
   "private": true,
+
   "version": "0.0.0",
+
   "type": "module",
+
   "scripts": {
+
     "dev": "vite",
-    "predeploy":"npm run build",
-     "deploy":"gh-pages -d build",
-    "build": "vite build,webpack --config webpack.config.js",
+
+    "predeploy": "npm run build",
+
+    "deploy": "gh-pages -d build",
+
+    "build": "vite build",
+
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+
     "preview": "vite preview"
+
   },
+
   "dependencies": {
+
     "@emotion/react": "^11.11.1",
+
     "@emotion/styled": "^11.11.0",
+
     "@mui/material": "^5.14.13",
+
     "flowbite": "^1.8.1",
+
     "flowbite-react": "^0.6.0",
+
     "icons": "^1.0.0",
+
     "nodemon": "^3.0.1",
+
     "react": "^18.2.0",
-    "react-dom": "^18.2.0", 
+
+    "react-dom": "^18.2.0",
+
     "react-icons": "^4.11.0",
+
     "react-router-dom": "^6.15.0",
+
     "react-social-icons": "^6.3.0",
+
     "styled-components": "^6.0.7",
+
     "tailwind": "^4.0.0",
+
     "webpack-dev-server": "^4.15.1"
+
   },
+
   "devDependencies": {
+
     "@babel/preset-env": "^7.22.15",
+
     "@babel/preset-react": "^7.22.15",
+
     "@types/react": "^18.2.15",
+
     "@types/react-dom": "^18.2.7",
+
     "@vitejs/plugin-react": "^4.0.3",
+
     "autoprefixer": "^10.4.15",
+
     "babel-core": "^4.7.16",
+
     "babel-loader": "^9.1.3",
+
     "daisyui": "^3.7.7",
+
     "eslint": "^8.45.0",
+
     "eslint-plugin-react": "^7.32.2",
+
     "eslint-plugin-react-hooks": "^4.6.0",
+
     "eslint-plugin-react-refresh": "^0.4.3",
+
+    "gh-pages": "^6.0.0",
+
     "html-webpack-plugin": "^5.5.3",
+
     "postcss": "^8.4.29",
+
     "tailwindcss": "^3.3.3",
+
     "vite": "^4.4.9",
+
     "webpack": "^5.88.2",
+
     "webpack-cli": "^5.1.4"
+
   }
+
 }
+
