--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "flowbite": "^1.8.1",
     "flowbite-react": "^0.6.0",
+    "google-map-react": "^2.2.1",
     "icons": "^1.0.0",
     "nodemon": "^3.0.1",
     "react": "^18.2.0",
@@ -19,6 +20,7 @@
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.15.0",
     "react-social-icons": "^6.3.0",
+    "rsuite": "^5.40.0",
     "styled-components": "^6.0.7",
     "tailwind": "^4.0.0",
     "webpack-dev-server": "^4.15.1"
