--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "antd": "^5.10.1",
     "flowbite": "^1.8.1",
     "flowbite-react": "^0.6.0",
     "google-map-react": "^2.2.1",
