--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 
-  "homepage": "https://cypher0214.github.io/Edu-Website/",
+  "homepage": "https://cypher0214.github.io/Edu-Website",
 
   "name": "savita-devi-coaching-center",
 
